# certbot-dns-corenetworks

./: .drone.jsonnet  .drone.yml  .flake8  .gitignore  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/: settings.yml
certbot_dns_corenetworks/: __init__.py  dns_corenetworks.py
certbot_dns_corenetworks/test/unit/: test_dns_corenetwork.py
tests/: dns_corenetwork_test.py
