[tool.poetry]
authors = ["Robert Kaussow <mail@thegeeklab.de>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
description = "Core Networks DNS Authenticator plugin for Certbot."
documentation = "https://github.com/thegeeklab/certbot-dns-corenetworks/"
homepage = "https://github.com/thegeeklab/certbot-dns-corenetworks/"
include = [
  "LICENSE",
]
keywords = ["dns", "certbot", "automation", "corenetworks"]
license = "MIT"
name = "certbot-dns-corenetworks"
packages = [
  {include = "certbot_dns_corenetworks"},
]

readme = "README.md"
repository = "https://github.com/thegeeklab/certbot-dns-corenetworks/"
version = "0.0.0"

[tool.poetry.plugins."certbot.plugins"]
dns-corenetworks = "certbot_dns_corenetworks.dns_corenetworks:Authenticator"

[tool.poetry.dependencies]
acme = "^1.10.1"
certbot = "^1.10.1 "
corenetworks = "^0.2.0"
parsedatetime = "^2.6"
python = "^3.6.0"
"zope.interface" = "^5.2.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
flake8 = "^3.8.4"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.5.3"
flake8-colors = "^0.1.9"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-logging-format = "^0.6.0"
flake8-pep3101 = "^1.3.0"
flake8-polyfill = "^1.0.2"
flake8-quotes = "^3.2.0"
mock = "^4.0.3"
pep8-naming = "^0.11.1"
pydocstyle = "^5.1.1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
yapf = "^0.30.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[tool.isort]
default_section = "THIRDPARTY"
force_single_line = true
line_length = 99
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["**/.env*", "**/env/*", "**/docs/*"]

[tool.pytest.ini_options]
addopts = "certbot_dns_corenetworks --cov=certbot_dns_corenetworks --cov-report=xml:coverage.xml --cov-report=term --cov-append --no-cov-on-fail"
filterwarnings = [
  "ignore::FutureWarning",
  "ignore:.*collections.*:DeprecationWarning",
  "ignore:.*pep8.*:FutureWarning",
]

[tool.coverage.run]
omit = ["**/test/*"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
